--- a/interacting-with-data-blazor/BlazingPizza/Pages/Index.razor
+++ b/interacting-with-data-blazor/BlazingPizza/Pages/Index.razor
@@ -2,6 +2,8 @@
 
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@using BlazingPizza.Services
+@inject OrderState OrderState
 
 <div class="main">
     <h1>Blazing Pizzas!</h1>
@@ -10,7 +12,7 @@
         {
             @foreach (var special in specials)
             {
-                <li style="background-image: url('@special.ImageUrl');">
+                <li @onclick="@(() => OrderState.ShowConfigurePizzaDialog(special))" style="background-image: url('@special.ImageUrl');">
                     <div class="pizza-info">
                         <span class="title">@special.Name</span>
                         @special.Description
@@ -22,11 +24,19 @@
     </ul>
 </div>
 
+@if (OrderState.ShowingConfigureDialog)
+{
+    <ConfigurePizzaDialog
+        Pizza="@OrderState.ConfiguringPizza"
+        OnCancel="@OrderState.CancelConfigurePizzaDialog"
+        OnConfirm="@OrderState.ConfirmConfigurePizzaDialog" />
+}
+
 @code {
     List<PizzaSpecial> specials = new();
     
     protected override async Task OnInitializedAsync()
     {
-        specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials");
+        specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials") ?? new();
     }
 }
