--- a/interacting-with-data-blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
+++ b/interacting-with-data-blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
@@ -9,7 +9,7 @@
         <form class="dialog-body">
             <div>
                 <label for="pizza-size">Size:</label>
-                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" name="pizza-size" id="pizza-size">
+                <input type="range" @bind="@Pizza.Size" @bind:event="oninput" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" name="pizza-size" id="pizza-size">
                 <span class="size-label">
                     @(Pizza.Size) (£@Pizza.GetFormattedTotalPrice())
                 </span>
