--- a/navigation-in-blazor/BlazingPizza/Pages/Index.razor
+++ b/navigation-in-blazor/BlazingPizza/Pages/Index.razor
@@ -8,7 +8,7 @@
         <img src="img/logo.svg" alt="Blazing Pizzas Logo">
     </a>
 
-    <NavLink href="" class="nav-tab active">
+    <NavLink href="" class="nav-tab active" Match="NavLinkMatch.All">
         <img src="img/pizza-slice.svg" alt="Blazing Pizzas">
         <div>Get Pizza</div>
     </NavLink>
