--- a/navigation-in-blazor/BlazingPizza/Pages/MyOrders.razor
+++ b/navigation-in-blazor/BlazingPizza/Pages/MyOrders.razor
@@ -7,7 +7,7 @@
         <img src="img/logo.svg" alt="Blazing Pizzas Logo">
     </a>
 
-    <NavLink href="" class="nav-tab">
+    <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
         <img src="img/pizza-slice.svg" alt="Get Pizza">
         <div>Get Pizza</div>
     </NavLink>
@@ -47,7 +47,7 @@
                     @if (@item.StatusText != "Delivered")
                     {
                         <div class="col flex-grow-0">
-                            <a href="myorders/" class="btn btn-success">
+                            <a href="myorders/@item.Order.OrderId" class="btn btn-success">
                                 Track &gt;
                             </a>
                         </div>
