--- a/navigation-in-blazor/BlazingPizza/Shared/MainLayout.razor
+++ b/navigation-in-blazor/BlazingPizza/Shared/MainLayout.razor
@@ -1,5 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
+<header class="top-bar">
+  <a class="logo" href="">
+    <img src="img/logo.svg" alt="Blazing Pizza">
+  </a>
+
+  <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
+    <img src="img/pizza-slice.svg" alt="Get Pizza">
+    <div>Get Pizza</div>
+  </NavLink>
+
+  <NavLink href="myorders" class="nav-tab">
+    <img src="img/bike.svg" alt="My Orders">
+    <div>My Orders</div>
+  </NavLink>
+</header>
+
 <main>
   <article class="content">@Body</article>
 </main>
+
+<footer>
+  &copy; Blazing Pizza @DateTime.UtcNow.Year
+</footer>
