--- a/forms-validation-blazor/BlazingPizza/Shared/AddressEditor.razor
+++ b/forms-validation-blazor/BlazingPizza/Shared/AddressEditor.razor
@@ -1,7 +1,7 @@
 <div class="form-field">
     <label for="customername">Name:</label>
     <div>
-        <input type="text" id="customername" @bind="Address.Name">
+        <input type="text" id="customername" @bind="Address.Name" @ref="startName">
     </div>
 </div>
 
@@ -42,4 +42,14 @@
 
 @code {
     [Parameter] public Address Address { get; set; }
+
+    private ElementReference startName;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await startName.FocusAsync();
+        }
+    }
 }
