--- a/forms-validation-blazor/BlazingPizza/Pages/Checkout.razor
+++ b/forms-validation-blazor/BlazingPizza/Pages/Checkout.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager NavigationManager
 
 <div class="main">
-    <EditForm Model="Order.DeliveryAddress" OnSubmit="CheckSubmission">
+    <EditForm Model="Order.DeliveryAddress" OnValidSubmit="PlaceOrder">
         <div class="checkout-cols">
             <div class="checkout-order-details">
                 <h4>Review Order</h4>
@@ -13,10 +13,6 @@
 
             <div class="checkout-delivery-address">
                 <h4>Deliver to...</h4>
-                @if (isError)
-                {
-                    <div class="alert alert-danger">Please enter a name and address.</div>
-                }
                 <AddressEditor Address="Order.DeliveryAddress" />
             </div>
         </div>
@@ -24,6 +20,8 @@
         <button class="checkout-button btn btn-warning" disabled=@isSubmitting>
             Place order
         </button>
+        <ValidationSummary />
+        <DataAnnotationsValidator />
     </EditForm>
 </div>
 
@@ -32,21 +30,6 @@
 
     bool isSubmitting;
 
-    bool isError = false;
-
-    public async Task CheckSubmission(EditContext editContext)
-    {
-        isSubmitting = true;
-        var model = editContext.Model as Address;
-        isError = string.IsNullOrWhiteSpace(model?.Name)
-            || string.IsNullOrWhiteSpace(model?.Line1)
-            || string.IsNullOrWhiteSpace(model?.PostalCode);
-        if (isError)
-        {
-            await PlaceOrder();
-        }
-        isSubmitting = false;
-    }
     async Task PlaceOrder()
     {
         isSubmitting = true;
