--- a/forms-validation-blazor/BlazingPizza/Shared/AddressEditor.razor
+++ b/forms-validation-blazor/BlazingPizza/Shared/AddressEditor.razor
@@ -2,6 +2,7 @@
   <label for="customername">Name:</label>
   <div>
     <InputText id="customername" @bind-Value="Address.Name" />
+    <ValidationMessage For="@(() => Address.Name)" />
   </div>
 </div>
 
@@ -9,6 +10,7 @@
   <label for="addressline1">Line 1:</label>
   <div>
     <InputText id="addressline1" @bind-Value="Address.Line1" />
+    <ValidationMessage For="@(() => Address.Line1)" />
   </div>
 </div>
 
@@ -16,6 +18,7 @@
   <label for="addressline2">Line 2:</label>
   <div>
     <InputText id="addressline2" @bind-Value="Address.Line2" />
+    <ValidationMessage For="@(() => Address.Line2)" />
   </div>
 </div>
 
@@ -23,6 +26,7 @@
   <label for="city">City:</label>
   <div>
     <InputText id="city" @bind-Value="Address.City" />
+    <ValidationMessage For="@(() => Address.City)" />
   </div>
 </div>
 
@@ -30,6 +34,7 @@
   <label for="region">Region:</label>
   <div>
     <InputText id="region" @bind-Value="Address.Region" />
+    <ValidationMessage For="@(() => Address.Region)" />
   </div>
 </div>
 
@@ -37,6 +42,7 @@
   <label for="postalcode">Postal Code:</label>
   <div>
     <InputText id="postalcode" @bind-Value="Address.PostalCode" />
+    <ValidationMessage For="@(() => Address.PostalCode)" />
   </div>
 </div>
 
