--- a/rich-interactive-components-blazor/BlazingPizza/Pages/Index.razor
+++ b/rich-interactive-components-blazor/BlazingPizza/Pages/Index.razor
@@ -3,6 +3,7 @@
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @inject OrderState OrderState
+@inject IJSRuntime JavaScript
 
 <div class="main">
     <ul class="pizza-cards">
@@ -37,8 +38,10 @@
             @foreach (var configuredPizza in order.Pizzas)
             {
                 <div class="cart-item">
-                    <a href="" @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))"
-                        class="delete-item">❌</a>
+                    <button type="button" class="close text-danger" aria-label="Close"
+                        @onclick="@(async () => await RemovePizzaConfirmation(configuredPizza))">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                     <div class="title">@(configuredPizza.Size)" @configuredPizza.Special!.Name</div>
                     <div class="item-price">
                         @configuredPizza.GetFormattedTotalPrice()
@@ -68,4 +71,14 @@
     protected override async Task OnInitializedAsync() =>
         specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(
             $"{NavigationManager.BaseUri}specials");
+
+    async Task RemovePizzaConfirmation(Pizza removePizza)
+    {
+        if (await JavaScript.InvokeAsync<bool>(
+            "confirm",
+            $"""Do you want to remove the "{removePizza.Special!.Name}" from your order?"""))
+        {
+            OrderState.RemoveConfiguredPizza(removePizza);
+        }
+    }
 }
