--- a/rich-interactive-components-blazor/BlazingPizza/Pages/Index.razor
+++ b/rich-interactive-components-blazor/BlazingPizza/Pages/Index.razor
@@ -40,7 +40,7 @@
                 <div class="cart-item">
                     <button type="button" class="close text-danger" aria-label="Close"
                         @onclick="@(async () => await RemovePizzaConfirmation(configuredPizza))">
-                        <span aria-hidden="true">&times;</span>
+                        <span aria-hidden="true">❌</span>
                     </button>
                     <div class="title">@(configuredPizza.Size)" @configuredPizza.Special!.Name</div>
                     <div class="item-price">
