--- a/rich-interactive-components-blazor/BlazingPizza/Pages/OrderDetail.razor
+++ b/rich-interactive-components-blazor/BlazingPizza/Pages/OrderDetail.razor
@@ -1,6 +1,7 @@
 @page "/myorders/{orderId:int}"
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@implements IDisposable
 
 <div class="main">
     @if (invalidOrder)
@@ -25,12 +26,18 @@
                 <h2>
                     Order placed @orderWithStatus.Order.CreatedTime.ToLongDateString()
                 </h2>
-                <p class="ml-auto mb-0">
+                <p class="ms-auto mb-0">
                     Status: <strong>@orderWithStatus.StatusText</strong>
                 </p>
             </div>
             <div class="track-order-body">
                 <div class="track-order-details">
+                    @if (IsOrderIncomplete)
+                    {
+                        <div class="spinner-grow text-danger float-end" role="status">
+                            <span class="visually-hidden">Checking your order status...</span>
+                        </div>
+                    }
                     @foreach (var pizza in orderWithStatus.Order.Pizzas)
                     {
                         <p>
@@ -50,10 +57,21 @@
 @code {
     [Parameter] public int OrderId { get; set; }
 
+    bool IsOrderIncomplete =>
+        orderWithStatus is null || orderWithStatus.IsDelivered == false;
+
+    PeriodicTimer timer = new(TimeSpan.FromSeconds(3));
+
     OrderWithStatus? orderWithStatus;
     bool invalidOrder = false;
 
-    protected override async Task OnParametersSetAsync()
+    protected override async Task OnParametersSetAsync() =>
+        await GetLatestOrderStatusUpdatesAsync();
+
+    protected override Task OnAfterRenderAsync(bool firstRender) =>
+        firstRender ? StartPollingTimerAsync() : Task.CompletedTask;
+
+    async Task GetLatestOrderStatusUpdatesAsync()
     {
         try
         {
@@ -66,4 +84,15 @@
             Console.Error.WriteLine(ex);
         }
     }
+
+    async Task StartPollingTimerAsync()
+    {
+        while (IsOrderIncomplete && await timer.WaitForNextTickAsync())
+        {
+            await GetLatestOrderStatusUpdatesAsync();
+            StateHasChanged();
+        }
+    }
+
+    public void Dispose() => timer.Dispose();
 }
