--- a/rich-interactive-components-blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
+++ b/rich-interactive-components-blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
@@ -8,8 +8,11 @@
         </div>
         <form class="dialog-body">
             <div>
-                <label for="pizza-size">Size:</label>
-                <input type="range" @bind="@Pizza.Size" @bind:event="oninput" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" name="pizza-size" id="pizza-size">
+                @if (supportSizing)
+                {
+                    <label for="pizza-size">Size:</label>
+                    <input type="range" @bind="@Pizza.Size" @bind:event="oninput" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" name="pizza-size" id="pizza-size">
+                }
                 <span class="size-label">
                     @(Pizza.Size)" (£@Pizza.GetFormattedTotalPrice())
                 </span>
@@ -33,4 +36,15 @@
     public EventCallback OnCancel { get; set; }
     [Parameter, EditorRequired]
     public EventCallback OnConfirm { get; set; }
+
+    bool supportSizing = true;
+
+    protected override void OnInitialized()
+    {
+        if (Pizza is { Special.FixedSize: not null })
+        {
+            Pizza.Size = Pizza.Special.FixedSize.Value;
+            supportSizing = false;
+        }
+    }
 }
